fix: gap between skills

--- a/index.css
+++ b/index.css
@@ -296,7 +296,7 @@ i {
 .skills-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-  gap: 2em;
+  gap: 1.5em 3.5em;
 }
 
 .skills__item {
